--- a/src/companenta/Become/Become.css
+++ b/src/companenta/Become/Become.css
@@ -4,6 +4,7 @@
     color: #232f3e;
     background-color: #ebf8fa;
     justify-content: space-between;
+    padding-top: 80px;
 }
 .become__title h1{
     color: #232f3e;
